<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="title_settings">Settings</string>

    <string name="pref_sort_order_key">sort_order</string>
    <string name="most_popular_label">Most Popular</string>
    <string name="highest_rated_label">Highest Rated</string>
    <string name="favorites_label">Favorites</string>
    <string name="pref_favorites_value" translatable="false">favorites</string>
    <string name="pref_most_popular_value" translatable="false">popular</string>
    <string name="pref_highest_rated_value" translatable="false">top_rated </string>

    <string name="sample_movie_title">The Shawshank Redemption</string>
    <string name="sample_movie_synopsis">Framed in the 1940s for the double murder of his wife and
        her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where
        he puts his accounting skills to work for an amoral warden. During his long stretch in prison,
        Dufresne comes to be admired by the other inmates -- including an older prisoner named Red --
        for his integrity and unquenchable sense of hope.</string>
    <string name="sample_release_date">1994</string>
    <string name="sample_user_rating">8.4/10</string>

    <string name="reviews_header">Reviews</string>
    <string name="trailers_header">Trailers</string>

    <string name="item_share">Share</string>
    <string name="sort_order_title">Sort order</string>
</resources>
