<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_order"
        android:icon="@drawable/ic_sort_white_32px"
        android:title="@string/sort_order_title"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_popular"
                    android:title="@string/most_popular_label" />
                <item
                    android:id="@+id/menu_top_rated"
                    android:title="@string/highest_rated_label" />
                <item
                    android:id="@+id/menu_favorites"
                    android:title="@string/favorites_label" />
            </group>
        </menu>
    </item>
</menu>