<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-bold"
            android:padding="@dimen/default_margin_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="@string/sample_movie_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_margin_value"
            android:paddingRight="@dimen/default_margin_value"
            android:paddingTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin_value"
                    tools:src="@drawable/ic_movie_poster" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_value"
                    android:layout_toRightOf="@id/poster"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    tools:text="@string/sample_user_rating" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_rating"
                    android:layout_marginTop="@dimen/default_margin_value"
                    android:layout_toRightOf="@id/poster"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="@string/sample_release_date" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/default_margin_value"
                    tools:src="@drawable/ic_heart_outline" />

            </RelativeLayout>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_value"
                android:fontFamily="sans-serif-light"
                android:textSize="17sp"
                tools:text="@string/sample_movie_synopsis" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/default_margin_value"
                android:layout_marginTop="@dimen/default_margin_value"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/trailers_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/trailers_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <View
                android:id="@+id/reviews_div"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/default_margin_value"
                android:layout_marginTop="@dimen/default_margin_value"
                android:background="@color/dividerColor"
                android:visibility="gone" />

            <TextView
                android:id="@+id/reviews_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reviews_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</layout>
